--- a/requirements.txt
+++ b/requirements.txt
@@ -1,203 +1,21 @@
-accelerate==0.28.0
-aiohttp==3.9.3
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
-asgiref==3.7.2
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.2.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-bitsandbytes==0.43.0
-bs4==0.0.2
-build==1.1.1
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.1
-contourpy==1.2.0
-cryptography==42.0.5
-cycler==0.12.1
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-debugpy==1.8.1
-decorator==5.1.1
-Deprecated==1.2.14
-distro==1.9.0
-emoji==2.10.1
-exceptiongroup==1.2.0
-executing==2.0.1
-fastapi==0.110.0
-filelock==3.13.1
-filetype==1.2.0
-flatbuffers==24.3.7
-fonttools==4.49.0
-frozenlist==1.4.1
-fsspec==2024.2.0
-funcy==2.0
-gensim==4.3.2
-gitdb==4.0.11
-GitPython==3.1.42
-google-auth==2.28.2
-googleapis-common-protos==1.63.0
-greenlet==3.0.3
-grpcio==1.62.1
-h11==0.14.0
-httpcore==1.0.4
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.21.4
-humanfriendly==10.0
-idna==3.6
-importlib-metadata==6.11.0
-importlib_resources==6.3.0
-ipykernel==6.29.3
-ipython==8.22.1
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-kiwisolver==1.4.5
-kubernetes==29.0.0
-langchain==0.1.12
-langchain-community==0.0.28
-langchain-core==0.1.32
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.1
-langchainhub==0.1.15
-langdetect==1.0.9
-langsmith==0.1.26
-lxml==5.1.0
-MarkupSafe==2.1.5
-marshmallow==3.20.2
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.8.1
-numexpr==2.9.0
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.17.1
-openai==1.14.1
-opencv-python==4.9.0.80
-opentelemetry-api==1.23.0
-opentelemetry-exporter-otlp-proto-common==1.23.0
-opentelemetry-exporter-otlp-proto-grpc==1.23.0
-opentelemetry-instrumentation==0.44b0
-opentelemetry-instrumentation-asgi==0.44b0
-opentelemetry-instrumentation-fastapi==0.44b0
-opentelemetry-proto==1.23.0
-opentelemetry-sdk==1.23.0
-opentelemetry-semantic-conventions==0.44b0
-opentelemetry-util-http==0.44b0
-orjson==3.9.15
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.1
-parso==0.8.3
-pdf2image==1.17.0
-pdfminer==20191125
-pdfminer.six==20221105
-pdfplumber==0.10.4
-pikepdf==8.13.0
-pillow==10.2.0
+pandas==2.0.0
 pillow_heif==0.15.0
-platformdirs==4.2.0
-posthog==3.5.0
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.8
-pulsar-client==3.4.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pybind11==2.11.1
-pycparser==2.21
-pycryptodome==3.20.0
-pydantic==2.6.4
-pydantic_core==2.16.3
-Pygments==2.17.2
+pillow==10.2.0
+gitpython==3.1.42
 pyLDAvis==3.4.1
-PyMuPDF==1.23.26
-PyMuPDFb==1.23.22
-pyparsing==3.1.1
-pypdf==4.1.0
-PyPDF2==3.0.1
-pypdfium2==4.27.0
-PyPika==0.48.9
-pyproject_hooks==1.0.0
-pyreadline3==3.4.1
-pytesseract==0.3.10
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-magic==0.4.27
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.2
-rapidfuzz==3.6.1
-regex==2023.12.25
-requests==2.31.0
-requests-oauthlib==1.4.0
-rsa==4.9
-safetensors==0.4.2
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-seaborn==0.13.2
-six==1.16.0
-smart-open==7.0.1
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.28
-stack-data==0.6.3
-starlette==0.36.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-threadpoolctl==3.3.0
-tiktoken==0.6.0
-tokenizers==0.15.2
-tomli==2.0.1
-torch==2.2.1
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
+pdfminer.six
 transformers==4.38.2
-typer==0.9.0
-types-requests==2.31.0.20240311
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2024.1
+torch==2.2.1
+transformers[torch]
+accelerate==0.27.2
+langchain==0.1.12
+langchain_community==0.0.28
+langchain_openai==0.0.8
+langchainhub==0.1.15
 unstructured==0.12.6
-unstructured-client==0.18.0
-urllib3==1.26.18
-uvicorn==0.28.0
-watchfiles==0.21.0
-wcwidth==0.2.13
-websocket-client==1.7.0
-websockets==12.0
-wordcloud==1.9.3
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.18.1
+pdf2image==1.17.0
+pikepdf==8.13.0
+pytesseract==0.3.10
+pypdf==4.1.0
+chromadb==0.4.24
+PyMuPDF==1.23.26
