--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain==0.1.12
 langchain_community==0.0.28
 langchain_openai==0.0.8
 langchainhub==0.1.15
-unstructured==0.12.6
+unstructured==0.18.15 #0.12.6
 pdf2image==1.17.0
 pikepdf==8.13.0
 pytesseract==0.3.10
