--- a/requirements_nw.txt
+++ b/requirements_nw.txt
@@ -1,25 +1,25 @@
-pandas
-pillow
-wrapt
-pillow_heif
-gitpython
-pyLDAvis
-pdfminer.six
-transformers
-torch
-transformers[torch]
-accelerate
-langchain
-langchain_community
-langchain_openai
-langchainhub
-unstructured
-pdf2image
-pikepdf
-pytesseract
-pypdf
-chromadb
-PyMuPDF
-gensim
-pi_heif
-unstructured_inference
+pandas==2.2.2
+pillow==11.3.0
+wrapt==1.17.3
+pillow_heif==1.1.1
+gitpython==3.1.42
+pyLDAvis==3.4.1
+pdfminer.six==20250506
+transformers==4.56.1
+torch==2.8.0
+transformers[torch]==4.56.1
+accelerate==1.10.1
+langchain==0.3.27
+langchain_community==0.3.30
+langchain_openai==0.3.34
+langchainhub==0.1.21
+unstructured==0.18.15
+pdf2image==1.17.0
+pikepdf==9.11.0
+pytesseract==0.3.13
+pypdf==6.1.1
+chromadb==1.1.0
+PyMuPDF==1.26.4
+gensim==4.3.3
+pi_heif==1.1.1
+unstructured_inference==1.0.5
